[tool.poetry]
name = "tgytdl"
version = "0.1.0"
description = "Telegram bot for downloading youtube videos"
authors = ["Andrew Tropin <andrew@trop.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
